--- a/index.html
+++ b/index.html
@@ -8,25 +8,46 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <style>
+        .navbar-brand{
+    color: black;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 25px;
+    letter-spacing: 2px;
+}
+.navbar-nav a{
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+
+}
+    </style>
+    <title>shopping site</title>
 </head>
 <body class="container-fluid">        
-    <nav class="navbar navbar-expand bg-white d-flex justify-content-around">    
-            <img class="img-fluid" src="logo.png" style="width: 2rem; height: 2rem;" alt="">                    
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Contact</a>
-                </li>
-            </ul>                       
+    <nav class="navbar position-relative navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#"><img src="shop1.png" height="55" width="60" alt="" srcset="">&nbsp;<span class="text-primary">SHOPPING</span>site</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">              
+              <li class="nav-item active">
+                <a class="nav-link" href="#home">Home</a>
+              </li>   
+              <li class="nav-item">
+                <a class="nav-link" href="#products">Products</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="#services">Services</a>
+              </li>                  
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>  
+          </div>
+        </div>
       </nav>
       <main>
         
