--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">              
               <li class="nav-item active">
-                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="home.html">Home</a>
               </li>   
               <li class="nav-item">
                 <a class="nav-link" href="#products">Products</a>
