--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="#login">Login</a>
+              </li>  
           </div>
         </div>
       </nav>
