--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                 <th scope="col">Address</th>
                 <th scope="col">Gender</th>
                 <th scope="col">Date</th>
-                <td scope="col">Action</th>
+                <th scope="col">Action</th>
                 
             </tr>
             </thead>
