--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">              
               <li class="nav-item active">
-                <a class="nav-link" href="home.html">Home</a>
+                <a class="nav-link" href="#home">Home</a>
               </li>   
               <li class="nav-item">
                 <a class="nav-link" href="#products">Products</a>
@@ -50,6 +50,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#login">Login</a>
               </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="home.html">CRUD</a>
+              </li> 
           </div>
         </div>
       </nav>
