--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="#login">Login</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link" href="home.html">CRUD</a>
+                <a class="nav-link" href="home.html">CRUD_TASK</a>
               </li> 
           </div>
         </div>
